
if HAVE_DOXYGEN
all: Doxyfile
else
all:
endif
       
.PHONY: test tests dox makedox

EXTRA_DIST=Doxyfile
if WANT_BUILD_DOC
dox: html/index.html
EXTRA_DIST+=man/* html/*
BUILT_DOC=html man
if HAVE_HELP2MAN
man1_MANS=              man/rsbench.1 man/librsb-config.1
else
man1_MANS=
endif
man3_MANS=man/man3/rsb*
if HAVE_RSBLIB
man3_MANS+=man/man3/Rsb*
endif

if HAVE_HELP2MAN
man/librsb-config.1: $(abs_top_builddir)/librsb-config
	$(MKDIR_P) man
	SOURCE_DATE_EPOCH=$(SOURCE_DATE_EPOCH) \
		$(HELP2MAN) --name="provide configuration information for librsb" --no-info $< | $(SED) 's/January //g' > $@
man/rsbench.1: ../rsbench
	$(MKDIR_P) man
	SOURCE_DATE_EPOCH=$(SOURCE_DATE_EPOCH) \
	$(HELP2MAN) --name="benchmark and test for librsb" --no-info $< | $(SED) 's/January //g' > $@
rsb_man1_dir="$(abs_builddir)"
else
rsb_man1_dir="$(abs_srcdir)"
endif

$(man3_MANS): html/index.html

html/index.html: ../rsb.h
	$(MAKE) makedox

makedox:
	DOXYGEN_PROJECT_NUMBER=$(VERSION) $(DOXYGEN) Doxyfile || echo "are you sure you have doxygen installed ?"
	$(MKDIR_P) man/man3_
	mv man/man3/* man/man3_/
if HAVE_RSBLIB
	if find man/man3_/rsb.hpp* man/man3_/RsbMatrix* man/man3_/RsbLib* ; then \
		mv man/man3_/rsb.hpp* man/man3_/RsbMatrix* man/man3_/RsbLib* man/man3/ ; \
	fi
	sed -i 's|^RsbMatrix< NT >|RsbMatrix|g' man/man3/RsbMatrix.3 # otherwise breaks lexgrog (apropos & co.); note: maybe inform Doxygen upstream?
endif
	test -f $(abs_top_srcdir)/scripts/rsbmandesc.awk
	test -f $(abs_top_srcdir)/scripts/rsbmanseealso.sh
	if find man/man3_/rsb_doc* ; then \
	mv man/man3_/rsb_doc* man/man3/ ; \
	$(SED) -i s/_doc_/::/g man/man3/* ; \
	for f in man/man3/rsb_* ; do mv $$f `echo $$f | $(SED) s/_doc_/::/g` ; done ; \
	for f in man/man3/rsb* ; do $(AWK) -f $(abs_top_srcdir)/scripts/rsbmandesc.awk $$f > $$f.tmp ; mv $$f.tmp $$f ; done ; \
	for f in man/man3/rsb* ; do $(SED) -i 's/^\(Generated.*$$\)/librsb was written by Michele Martone; this documentation has been generated by Doxygen./g' $$f ; done ; \
	mv  -v man/man3/rsb::rsb.3               man/man3/rsb.h.3 ; \
	$(SED) -i s/rsb::rsb/rsb.h/g                man/man3/rsb.h.3 ; \
	mv  -v man/man3/rsb::sparse_blas.3       man/man3/rsb-spblas.h.3 ; \
	$(SED) -i s/rsb::sparse_blas/rsb-spblas.h/g man/man3/rsb-spblas.h.3 ; \
	mv  -v man/man3/rsb::examples.3          man/man3/rsb-examples.3 ; \
	$(SED) -i s/rsb::examples/rsb-examples/g  man/man3/rsb-examples.3 ; \
	$(SED) -i 's/\\fP\([a-z]\)/\\fP \1/g'     man/man3/rsb*.3 ; \
	$(SED) -i 's/\\leftarrow/<-/g;s/\\\(alpha\|beta\|Omega\)/\1/g;s/\\cdot/*/g;s/\\$$//g;s/\\librsb/librsb/g;s/\\rsblib/rsblib/g;s/\\file//g;' man/man3/*.3; \
	for f in man/man3/rsb* ; do $(abs_top_srcdir)/scripts/rsbmanseealso.sh man/man3/rsb* >>  $$f ; done ; \
	rm -fR man/man3_ ; fi

tests: test

test:
	echo "Please note this is an internal test.."
	test "`ls html/*html   | wc -l`" -ge 127
	test "`ls $(rsb_man1_dir)/man/*.1      | wc -l`" -eq 2
if HAVE_TROFF
	test "`troff -z $(rsb_man1_dir)/man/*.1 man/man3/*.3 2>&1 | grep -v can.t.break | wc -l`" = 0;
endif
	test -f man/man3/rsb.h.3
	test -f man/man3/rsb-examples.3
if HAVE_SPARSE_BLAS_INTERFACE
	test -f man/man3/rsb-spblas.h.3
endif
if HAVE_RSBLIB
	test -f man/man3/rsb.hpp.3
	test -f man/man3/RsbLib.3
	test -f man/man3/RsbMatrix.3
endif
if HAVE_TROFF
	test "`troff man/man3/rsb.h.3          | wc -l`" -gt 30000;
	test "`troff man/man3/rsb-examples.3   | wc -l`" -gt 20000;
	test "`troff man/man3/rsb-spblas.h.3   | wc -l`" -gt 60000;
if HAVE_RSBLIB
	test "`troff man/man3/rsb.hpp.3   | wc -l`" -gt 1000;
	test "`troff man/man3/RsbMatrix.3 | wc -l`" -gt 4500;
	test "`troff man/man3/RsbLib.3    | wc -l`" -gt 400;
endif
endif
	for manpage in $(rsb_man1_dir)/man/*.1 man/man3/*.3; do \
		aspell --home-dir `pwd` --mode=nroff list < $$manpage | sort | uniq; \
	done > bad.wordlist
	{ echo -n 'personal_ws-1.1 en '; wc -l < bad.wordlist ; sort bad.wordlist | uniq; } > good.wordlist
	for manpage in $(rsb_man1_dir)/man/*.1 man/man3/*.3; do \
		aspell --home-dir `pwd` -p good.wordlist --mode=nroff list < $$manpage | sort | uniq; \
	done
	if which lexgrog ; then lexgrog man/man*/* ; fi
	echo "Documentation seems fine."
else
makedox:
	echo "Documentation building has been disabled at configure time --- skipping."

test:
	echo "Documentation building has been disabled at configure time --- skipping."

install-data-local:
	$(MKDIR_P) "$(DESTDIR)$(docdir)"
	$(MKDIR_P) "$(DESTDIR)$(docdir)/html/"
	if test -f ./html/index.html ; then $(INSTALL_DATA)  ./html/* "$(DESTDIR)$(docdir)/html/" ; fi

uninstall-local:
	cd ./html ; for f in * ; do if test -f "$(DESTDIR)$(docdir)/html/"$$f ; then  rm "$(DESTDIR)$(docdir)/html/"$$f ; fi ; done
	if test -d "$(DESTDIR)$(docdir)/html" ; then rmdir "$(DESTDIR)$(docdir)/html" || true ; fi
	if test -d "$(DESTDIR)$(docdir)" ; then rmdir "$(DESTDIR)$(docdir)" || true ; fi
dox:
EXTRA_DIST+=
BUILT_DOC=
man1_MANS=
$(man1_MANS):
man3_MANS=
$(man3_MANS):
endif

cleanall:
	rm -rf $(BUILT_DOC)


